--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <title>This Should be on GitHub</title>
     <body>
         <h1>Hello GitHub!!</h1>
+        <p>This is new text pushed up in my second commit</p>
     </body>
 
-    
 </head>
 </html>
